--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,12 +9,10 @@ services:
             MONGO_INITDB_DATABASE: safe-events-db
             MONGO_INITDB_ROOT_USERNAME: root
             MONGO_INITDB_ROOT_PASSWORD: rootpassword
-        ports:
-            - 27017:27017
         #env_file:
         #    - .env
         volumes:
-            - mongodb_data_container:/data/db
+            - mongodb_data_volume:/data/db
             #- ./.docker/mongodb/mongod.conf:/etc/mongod.conf
             #- ./.docker/mongodb/initdb.d/:/docker-entrypoint-initdb.d/
             #- ./.docker/mongodb/data/db/:/data/db/
@@ -27,12 +25,14 @@ services:
         container_name: safe-events
         image: safe-events/backend:0.1.0
         restart: always
+        ports:
+            - 9090:9090
         networks: 
             - database
         environment: 
             SERVICE_PORT: 9090
             SERVICE_NETW: tcp
-            MONGODB_URL: https://mongo:27017
+            MONGO_URL: mongodb://mongo:27017
             
 networks:
     # Database network is the bridge between domain environment and the sql databases
@@ -41,4 +41,4 @@ networks:
         driver: bridge
 
 volumes:
-    mongodb_data_container:
+    mongodb_data_volume:
