--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,10 +5,12 @@ services:
         container_name: mongo
         image: mongo:4.2.10
         restart: on-failure
+        ports:
+            - 8080:27017
         environment:
             MONGO_INITDB_DATABASE: safe-events-db
             MONGO_INITDB_ROOT_USERNAME: root
-            MONGO_INITDB_ROOT_PASSWORD: rootpassword
+            MONGO_INITDB_ROOT_PASSWORD: rootpwd
         #env_file:
         #    - .env
         volumes:
@@ -21,18 +23,18 @@ services:
         networks: 
             - database
     
-    backend:
-        container_name: safe-events
-        image: safe-events/backend:0.1.0
-        restart: always
-        ports:
-            - 9090:9090
-        networks: 
-            - database
-        environment: 
-            SERVICE_PORT: 9090
-            SERVICE_NETW: tcp
-            MONGO_URL: mongodb://mongo:27017
+    # backend:
+    #     container_name: safe-events
+    #     image: safe-events/backend:0.1.0
+    #     restart: always
+    #     ports:
+    #         - 9090:9090
+    #     networks: 
+    #         - database
+    #     environment: 
+    #         SERVICE_PORT: 9090
+    #         SERVICE_NETW: tcp
+    #         MONGO_URL: mongodb://mongo:27017
             
 networks:
     # Database network is the bridge between domain environment and the sql databases
