--- a/docker/safe-events/dockerfile
+++ b/docker/safe-events/dockerfile
@@ -9,6 +9,7 @@ COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
 
+RUN go test ./...
 RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main cmd/safe-events/main.go
 
 ######## Start a new stage from scratch #######
