--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,33 +2,33 @@ version: '3.8'
 
 services:
     # DATABASE
-    # mysql:
-    #     container_name: safe-events-mysql
-    #     image: mysql/mysql-server:latest
-    #     restart: on-failure
-    #     ports:
-    #         - "3306:3306"
-    #     volumes:
-    #         - "dbdata:/var/lib/mysql"
-    #         - "dbdump:/docker-entrypoint-initdb.d"
-    #     networks: 
-    #         - database
-    # 
-    # myadmin:
-    #     container_name: safe-events-myadmin
-    #     image: phpmyadmin/phpmyadmin:latest
-    #     restart: always
-    #     depends_on:
-    #         - mysql
-    #     ports:
-    #         - "9090:80"
-    #     networks: 
-    #         - database
-    #     environment: 
-    #         PMA_HOST: safe-events-mysql
-    #         PMA_PORT: 3306
-    #         PMA_USER: myadmin
-    #         PMA_PASSWORD: myadminpwd
+    mysql:
+        container_name: safe-events-mysql
+        image: mysql/mysql-server:latest
+        restart: on-failure
+        ports:
+            - "3306:3306"
+        volumes:
+            - "dbdata:/var/lib/mysql"
+            - "dbdump:/docker-entrypoint-initdb.d"
+        networks: 
+            - database
+    
+    myadmin:
+        container_name: safe-events-myadmin
+        image: phpmyadmin/phpmyadmin:latest
+        restart: always
+        depends_on:
+            - mysql
+        ports:
+            - "9090:80"
+        networks: 
+            - database
+        environment: 
+            PMA_HOST: safe-events-mysql
+            PMA_PORT: 3306
+            PMA_USER: myadmin
+            PMA_PASSWORD: myadminpwd
     
     # BAKCEND
     backend:
