--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
             - "dbdump:/docker-entrypoint-initdb.d"
         networks: 
             - database
-    
+            
     myadmin:
         container_name: safe-events-myadmin
         image: phpmyadmin/phpmyadmin:latest
@@ -30,15 +30,15 @@ services:
             PMA_USER: myadmin
             PMA_PASSWORD: myadminpwd
     
-    # BAKCEND
-    backend:
-        container_name: safe-events
-        image: safe-events/backend:0.1.0
-        restart: always
-        ports:
-            - 8080:8080
-        networks: 
-            - database
+    # # BAKCEND
+    # backend:
+    #     container_name: safe-events
+    #     image: safe-events/backend:0.1.0
+    #     restart: always
+    #     ports:
+    #         - 8080:8080
+    #     networks: 
+    #         - database
             
 networks:
     # Database network is the bridge between domain environment and the sql databases
