--- a/docker/safe-events/dockerfile
+++ b/docker/safe-events/dockerfile
@@ -19,7 +19,7 @@ RUN apk --no-cache add ca-certificates
 
 WORKDIR /app
 
-COPY --from=builder /app/template .
+COPY --from=builder /app/template ./template
 COPY --from=builder /app/.env .
 COPY --from=builder /app/main .
 
